<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My Nanodegree App!</string>
    <string name="action_settings">Settings</string>
    <string name="media_streamer">SPOTIFY STREAMING</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN PROJECT</string>
</resources>
