<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#BCAAA4"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:onClick="sendMessage"
        android:background="#4DB6AC"
        android:layout_below="@+id/textView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:onClick="sendMessage2"
        android:background="#4DB6AC"
        android:layout_below="@+id/button"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:onClick="sendMessage3"
        android:background="#4DB6AC"
        android:layout_below="@+id/button2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:onClick="sendMessage4"
        android:background="#4DB6AC"
        android:layout_below="@+id/button3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:onClick="sendMessage5"
        android:background="#4DB6AC"
        android:layout_below="@+id/button4"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:onClick="sendMessage6"
        android:background="#78909C"
        android:textColor="#E3F2FD"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

</RelativeLayout>
